ФронтЭнд часть 5, работа с формами

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 
             <div class="hidden md:flex items-center space-x-8">
                 <a href="/" class="hover:text-purple-200 smooth-transition">Главная</a>
-                <a href="#" class="hover:text-purple-200 smooth-transition">Каталог</a>
+                <a href="{% url 'goods:index/' %}" class="hover:text-purple-200 smooth-transition">Каталог</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">Мои объявления</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">О нас</a>
             </div>
