--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 {% load static %}
 
 <html lang="ru">
@@ -7,15 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
           content="Бартерная платформа для обмена вещами между пользователями. Размещайте объявления, находите нужные товары и предлагайте обмен.">
-    <title>Обменяй - Бартерная платформа для обмена вещами</title>
+{#    <title>Обменяй - Бартерная платформа для обмена вещами</title>#}
+    <title>{{ title }}</title>
     {#        <script src="https://cdn.tailwindcss.com"></script>#}
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <!-- Стиль для страниц -->
+    {% block css %}
 
+    {% endblock css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <!-- Header -->
-
 <header class="bg-white shadow-sm sticky top-0 z-10">
     <nav class="container mx-auto px-6 py-4 ">
         <div class="flex items-center justify-between">
@@ -27,7 +31,8 @@
 
             <div class="hidden md:flex items-center space-x-8">
                 <a href="/" class="hover:text-purple-200 smooth-transition">Главная</a>
-                <a href="{% url 'goods:index' category_slug %}" class="hover:text-purple-200 smooth-transition">Каталог</a>
+                <a href="{% url 'goods:catalog'%}"
+                   class="hover:text-purple-200 smooth-transition">Каталог</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">Мои объявления</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">О нас</a>
             </div>
@@ -35,16 +40,16 @@
             <div class="flex items-center space-x-4">
                 {% if user.is_authenticated %}
                     <div class="flex items-center space-x-4">
-{#                        <button class="p-2 text-gray-600 hover:text-blue-600">#}
-{#                            <i class="fas fa-search"></i>#}
-{#                        </button>#}
+                        {#                        <button class="p-2 text-gray-600 hover:text-blue-600">#}
+                        {#                            <i class="fas fa-search"></i>#}
+                        {#                        </button>#}
                         <a href="{% url 'users:profile' %}" class="p-2 text-gray-600 hover:text-blue-600">
                             <i class="fas fa-user"></i>
                         </a>
-{#                        <a href="#" class="p-2 text-gray-600 hover:text-blue-600 relative">#}
-{#                            <i class="fas fa-heart"></i>#}
-{#                            <span class="absolute -top-1 -right-1 bg-blue-600 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">3</span>#}
-{#                        </a>#}
+                        {#                        <a href="#" class="p-2 text-gray-600 hover:text-blue-600 relative">#}
+                        {#                            <i class="fas fa-heart"></i>#}
+                        {#                            <span class="absolute -top-1 -right-1 bg-blue-600 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">3</span>#}
+                        {#                        </a>#}
                         <button class="md:hidden p-2 text-gray-600" id="mobile-menu-button">
                             <i class="fas fa-bars"></i>
                         </button>
