--- a/static/css/main_styles.css
+++ b/static/css/main_styles.css
@@ -1,30 +1,15 @@
-.image-preview:hover .remove-image {
-    opacity: 1;
+.gradient-bg {
+    background: linear-gradient(135deg, #0f17cc 0%, #5365cf 100%);
 }
 
-.remove-image {
-    opacity: 0;
-    transition: opacity 0.2s;
+.card-hover:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
-.category-dropdown {
-    max-height: 300px;
-    overflow-y: auto;
+.smooth-transition {
+    transition: all 0.3s ease;
 }
-
-.tag-input::-webkit-scrollbar {
-    height: 5px;
-}
-
-.tag-input::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-.tag-input::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 3px;
-}
-
 
 /**, ::before, ::after {*/
 /*    --tw-border-spacing-x: 0;*/
@@ -134,7 +119,7 @@
 /*    --tw-contain-style: ;*/
 /*}*/
 
-/* ! tailwindcss v3.4.16 | MIT License | https://tailwindcss.com */
+/* ! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com */
 *, ::after, ::before {
     box-sizing: border-box;
     border-width: 0;
@@ -364,10 +349,6 @@ img, video {
     }
 }
 
-.pointer-events-none {
-    pointer-events: none
-}
-
 .absolute {
     position: absolute
 }
@@ -376,42 +357,12 @@ img, video {
     position: relative
 }
 
-.sticky {
-    position: sticky
+.right-2 {
+    right: 0.5rem
 }
 
-.inset-y-0 {
-    top: 0;
-    bottom: 0
-}
-
-.-right-1 {
-    right: -0.25rem
-}
-
-.-top-1 {
-    top: -0.25rem
-}
-
-.left-0 {
-    left: 0
-}
-
-.right-0 {
-    right: 0
-}
-
-.top-0 {
-    top: 0
-}
-
-.z-10 {
-    z-index: 10
-}
-
-.mx-3 {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem
+.top-2 {
+    top: 0.5rem
 }
 
 .mx-auto {
@@ -419,12 +370,21 @@ img, video {
     margin-right: auto
 }
 
-.mb-1 {
-    margin-bottom: 0.25rem
+.my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem
 }
 
-.mb-2 {
-    margin-bottom: 0.5rem
+.mb-10 {
+    margin-bottom: 2.5rem
+}
+
+.mb-16 {
+    margin-bottom: 4rem
+}
+
+.mb-3 {
+    margin-bottom: 0.75rem
 }
 
 .mb-4 {
@@ -435,60 +395,24 @@ img, video {
     margin-bottom: 1.5rem
 }
 
-.mb-8 {
-    margin-bottom: 2rem
+.mb-12 {
+    margin-bottom: 3rem
 }
 
-.ml-2 {
-    margin-left: 0.5rem
-}
-
-.ml-3 {
-    margin-left: 0.75rem
-}
-
-.mr-1 {
-    margin-right: 0.25rem
-}
-
-.mr-2 {
-    margin-right: 0.5rem
-}
-
-.mr-3 {
-    margin-right: 0.75rem
+.mb-2 {
+    margin-bottom: 0.5rem
 }
 
 .mr-4 {
     margin-right: 1rem
 }
 
-.mt-1 {
-    margin-top: 0.25rem
-}
-
-.mt-2 {
-    margin-top: 0.5rem
-}
-
 .mt-4 {
     margin-top: 1rem
 }
 
-.mt-8 {
-    margin-top: 2rem
-}
-
-.block {
-    display: block
-}
-
 .flex {
     display: flex
-}
-
-.inline-flex {
-    display: inline-flex
 }
 
 .grid {
@@ -499,64 +423,36 @@ img, video {
     display: none
 }
 
-.aspect-square {
-    aspect-ratio: 1 / 1
+.h-20 {
+    height: 5rem
 }
 
-.h-10 {
-    height: 2.5rem
+.h-48 {
+    height: 12rem
 }
 
-.h-16 {
-    height: 4rem
+.h-12 {
+    height: 3rem
 }
 
-.h-4 {
-    height: 1rem
-}
-
-.h-8 {
-    height: 2rem
-}
-
-.h-full {
-    height: 100%
-}
-
-.w-10 {
-    width: 2.5rem
-}
-
-.w-16 {
-    width: 4rem
-}
-
-.w-4 {
-    width: 1rem
-}
-
-.w-8 {
-    width: 2rem
+.w-20 {
+    width: 5rem
 }
 
 .w-full {
     width: 100%
 }
 
-.flex-1 {
-    flex: 1 1 0
+.w-12 {
+    width: 3rem
 }
 
-.flex-shrink-0 {
-    flex-shrink: 0
+.max-w-3xl {
+    max-width: 48rem
 }
 
-.flex-grow {
-    flex-grow: 1
-}
-
-.cursor-pointer {
-    cursor: pointer
+.max-w-2xl {
+    max-width: 42rem
 }
 
 .grid-cols-1 {
@@ -567,32 +463,12 @@ img, video {
     grid-template-columns:repeat(2, minmax(0, 1fr))
 }
 
-.grid-cols-3 {
-    grid-template-columns:repeat(3, minmax(0, 1fr))
-}
-
 .flex-col {
     flex-direction: column
 }
 
-.flex-col-reverse {
-    flex-direction: column-reverse
-}
-
-.flex-wrap {
-    flex-wrap: wrap
-}
-
-.items-start {
-    align-items: flex-start
-}
-
 .items-center {
     align-items: center
-}
-
-.justify-end {
-    justify-content: flex-end
 }
 
 .justify-center {
@@ -601,14 +477,6 @@ img, video {
 
 .justify-between {
     justify-content: space-between
-}
-
-.gap-2 {
-    gap: 0.5rem
-}
-
-.gap-3 {
-    gap: 0.75rem
 }
 
 .gap-4 {
@@ -629,16 +497,22 @@ img, video {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)))
 }
 
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)))
-}
-
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(2rem * var(--tw-space-x-reverse));
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)))
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -647,24 +521,8 @@ img, video {
     margin-bottom: calc(0.5rem * var(--tw-space-y-reverse))
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0.75rem * var(--tw-space-y-reverse))
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1rem * var(--tw-space-y-reverse))
-}
-
 .overflow-hidden {
     overflow: hidden
-}
-
-.rounded {
-    border-radius: 0.25rem
 }
 
 .rounded-full {
@@ -675,52 +533,22 @@ img, video {
     border-radius: 0.5rem
 }
 
-.rounded-md {
-    border-radius: 0.375rem
+.rounded {
+    border-radius: 0.25rem
 }
 
-.rounded-r-md {
-    border-top-right-radius: 0.375rem;
-    border-bottom-right-radius: 0.375rem
+.rounded-l-lg {
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem
 }
 
-.border {
-    border-width: 1px
+.rounded-r-lg {
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem
 }
 
 .border-2 {
     border-width: 2px
-}
-
-.border-b {
-    border-bottom-width: 1px
-}
-
-.border-t {
-    border-top-width: 1px
-}
-
-.border-t-2 {
-    border-top-width: 2px
-}
-
-.border-dashed {
-    border-style: dashed
-}
-
-.border-blue-600 {
-    --tw-border-opacity: 1;
-    border-color: rgb(37 99 235 / var(--tw-border-opacity, 1))
-}
-
-.border-gray-200 {
-    --tw-border-opacity: 1;
-    border-color: rgb(229 231 235 / var(--tw-border-opacity, 1))
-}
-
-.border-gray-300 {
-    --tw-border-opacity: 1;
-    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1))
 }
 
 .border-gray-700 {
@@ -728,28 +556,9 @@ img, video {
     border-color: rgb(55 65 81 / var(--tw-border-opacity, 1))
 }
 
-.border-transparent {
-    border-color: transparent
-}
-
-.bg-gray-50 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1))
-}
-
-.bg-blue-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1))
-}
-
-.bg-blue-50 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1))
-}
-
-.bg-blue-600 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1))
+.border-white {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity, 1))
 }
 
 .bg-gray-100 {
@@ -757,18 +566,19 @@ img, video {
     background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
 }
 
-.bg-gray-200 {
+.bg-gray-50 {
     --tw-bg-opacity: 1;
-    background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
+    background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1))
 }
 
-.bg-gray-800 {
+.bg-purple-100 {
     --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1))
+    background-color: rgb(243 232 255 / var(--tw-bg-opacity, 1))
 }
 
-.bg-transparent {
-    background-color: transparent
+.bg-purple-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(126 34 206 / var(--tw-bg-opacity, 1))
 }
 
 .bg-white {
@@ -776,22 +586,40 @@ img, video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
 
-.p-2 {
-    padding: 0.5rem
+.bg-gray-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1))
+}
+
+.bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1))
+}
+
+.bg-purple-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1))
+}
+
+.bg-transparent {
+    background-color: transparent
+}
+
+.bg-yellow-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1))
+}
+
+.object-cover {
+    object-fit: cover
+}
+
+.p-4 {
+    padding: 1rem
 }
 
 .p-6 {
     padding: 1.5rem
-}
-
-.px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem
-}
-
-.px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem
 }
 
 .px-4 {
@@ -804,14 +632,9 @@ img, video {
     padding-right: 1.5rem
 }
 
-.py-0 {
-    padding-top: 0;
-    padding-bottom: 0
-}
-
-.py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem
+.py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem
 }
 
 .py-2 {
@@ -829,53 +652,24 @@ img, video {
     padding-bottom: 1rem
 }
 
-.py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem
-}
-
-.pb-2 {
-    padding-bottom: 0.5rem
-}
-
-.pb-6 {
-    padding-bottom: 1.5rem
-}
-
-.pl-2 {
-    padding-left: 0.5rem
-}
-
-.pl-3 {
-    padding-left: 0.75rem
-}
-
-.pl-8 {
-    padding-left: 2rem
-}
-
-.pr-12 {
-    padding-right: 3rem
-}
-
-.pr-2 {
+.px-2 {
+    padding-left: 0.5rem;
     padding-right: 0.5rem
 }
 
-.pr-7 {
-    padding-right: 1.75rem
+.px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem
 }
 
-.pt-12 {
-    padding-top: 3rem
+.py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem
 }
 
-.pt-6 {
-    padding-top: 1.5rem
-}
-
-.text-left {
-    text-align: left
+.py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem
 }
 
 .text-center {
@@ -887,14 +681,29 @@ img, video {
     line-height: 2rem
 }
 
-.text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem
+.text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem
+}
+
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem
 }
 
 .text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem
+}
+
+.text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem
+}
+
+.text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem
 }
 
 .text-xs {
@@ -914,54 +723,19 @@ img, video {
     font-weight: 600
 }
 
-.text-blue-500 {
-    --tw-text-opacity: 1;
-    color: rgb(59 130 246 / var(--tw-text-opacity, 1))
-}
-
-.text-blue-600 {
-    --tw-text-opacity: 1;
-    color: rgb(37 99 235 / var(--tw-text-opacity, 1))
-}
-
-.text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity, 1))
-}
-
-.text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity, 1))
-}
-
 .text-gray-600 {
     --tw-text-opacity: 1;
     color: rgb(75 85 99 / var(--tw-text-opacity, 1))
 }
 
-.text-gray-700 {
+.text-purple-600 {
     --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity, 1))
+    color: rgb(147 51 234 / var(--tw-text-opacity, 1))
 }
 
-.text-gray-800 {
+.text-purple-800 {
     --tw-text-opacity: 1;
-    color: rgb(31 41 55 / var(--tw-text-opacity, 1))
-}
-
-.text-green-500 {
-    --tw-text-opacity: 1;
-    color: rgb(34 197 94 / var(--tw-text-opacity, 1))
-}
-
-.text-orange-500 {
-    --tw-text-opacity: 1;
-    color: rgb(249 115 22 / var(--tw-text-opacity, 1))
-}
-
-.text-red-600 {
-    --tw-text-opacity: 1;
-    color: rgb(220 38 38 / var(--tw-text-opacity, 1))
+    color: rgb(107 33 168 / var(--tw-text-opacity, 1))
 }
 
 .text-white {
@@ -969,22 +743,30 @@ img, video {
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
 
-.text-yellow-500 {
+.text-gray-300 {
     --tw-text-opacity: 1;
-    color: rgb(234 179 8 / var(--tw-text-opacity, 1))
+    color: rgb(209 213 219 / var(--tw-text-opacity, 1))
 }
 
-/*.shadow {*/
-/*    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);*/
-/*    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);*/
-/*    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)*/
-/*}*/
+.text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity, 1))
+}
 
-/*.shadow-lg {*/
-/*    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);*/
-/*    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);*/
-/*    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)*/
-/*}*/
+.text-gray-800 {
+    --tw-text-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-text-opacity, 1))
+}
+
+.text-purple-400 {
+    --tw-text-opacity: 1;
+    color: rgb(192 132 252 / var(--tw-text-opacity, 1))
+}
+
+.text-yellow-400 {
+    --tw-text-opacity: 1;
+    color: rgb(250 204 21 / var(--tw-text-opacity, 1))
+}
 
 /*.shadow-md {*/
 /*    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);*/
@@ -998,34 +780,34 @@ img, video {
 /*    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)*/
 /*}*/
 
-.hover\:border-blue-200:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(191 219 254 / var(--tw-border-opacity, 1))
-}
-
-.hover\:bg-blue-50:hover {
+.hover\:bg-purple-100:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1))
+    background-color: rgb(243 232 255 / var(--tw-bg-opacity, 1))
 }
 
-.hover\:bg-blue-700:hover {
+.hover\:bg-purple-600:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1))
+    background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1))
 }
 
-.hover\:bg-gray-200:hover {
+.hover\:bg-purple-700:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
+    background-color: rgb(126 34 206 / var(--tw-bg-opacity, 1))
 }
 
-.hover\:bg-gray-50:hover {
+.hover\:bg-white:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1))
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
 
-.hover\:text-blue-600:hover {
+.hover\:text-purple-200:hover {
     --tw-text-opacity: 1;
-    color: rgb(37 99 235 / var(--tw-text-opacity, 1))
+    color: rgb(233 213 255 / var(--tw-text-opacity, 1))
+}
+
+.hover\:text-purple-800:hover {
+    --tw-text-opacity: 1;
+    color: rgb(107 33 168 / var(--tw-text-opacity, 1))
 }
 
 .hover\:text-white:hover {
@@ -1033,58 +815,34 @@ img, video {
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
 
-.focus\:border-blue-500:focus {
-    --tw-border-opacity: 1;
-    border-color: rgb(59 130 246 / var(--tw-border-opacity, 1))
-}
-
 .focus\:outline-none:focus {
     outline: 2px solid transparent;
     outline-offset: 2px
 }
 
-.focus\:ring:focus {
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
-}
-
-.focus\:ring-2:focus {
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
-}
-
-.focus\:ring-blue-200:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity, 1))
-}
-
-.focus\:ring-blue-500:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1))
-}
-
-.focus\:ring-opacity-50:focus {
-    --tw-ring-opacity: 0.5
-}
-
-.focus\:ring-offset-2:focus {
-    --tw-ring-offset-width: 2px
-}
-
 @media (min-width: 640px) {
-    .sm\:flex-row {
-        flex-direction: row
+    .sm\:grid-cols-2 {
+        grid-template-columns:repeat(2, minmax(0, 1fr))
     }
 
-    .sm\:text-sm {
-        font-size: 0.875rem;
-        line-height: 1.25rem
+    .sm\:grid-cols-3 {
+        grid-template-columns:repeat(3, minmax(0, 1fr))
+    }
+
+    .sm\:flex-row {
+        flex-direction: row
     }
 }
 
 @media (min-width: 768px) {
+    .md\:mt-0 {
+        margin-top: 0
+    }
+
+    .md\:block {
+        display: block
+    }
+
     .md\:flex {
         display: flex
     }
@@ -1093,12 +851,8 @@ img, video {
         display: none
     }
 
-    .md\:w-1\/4 {
-        width: 25%
-    }
-
-    .md\:w-3\/4 {
-        width: 75%
+    .md\:grid-cols-3 {
+        grid-template-columns:repeat(3, minmax(0, 1fr))
     }
 
     .md\:grid-cols-2 {
@@ -1115,5 +869,16 @@ img, video {
 
     .md\:flex-row {
         flex-direction: row
+    }
+
+    .md\:text-5xl {
+        font-size: 3rem;
+        line-height: 1
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:grid-cols-4 {
+        grid-template-columns:repeat(4, minmax(0, 1fr))
     }
 }
