--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 {% load static %}
 
 <html lang="ru">
@@ -8,19 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
           content="Бартерная платформа для обмена вещами между пользователями. Размещайте объявления, находите нужные товары и предлагайте обмен.">
-{#    <title>Обменяй - Бартерная платформа для обмена вещами</title>#}
+    {#    <title>Обменяй - Бартерная платформа для обмена вещами</title>#}
     <title>{{ title }}</title>
     {#        <script src="https://cdn.tailwindcss.com"></script>#}
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <!-- Стиль для страниц -->
-    {% block css %}
-
-    {% endblock css %}
+    {% block css %}    {% endblock css %}
+    {#    <link href="{% static 'css/font-awesome_6.4.0_css_all.css' %}" rel="stylesheet">#}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <!-- Header -->
-<header class="bg-white shadow-sm sticky top-0 z-10">
+{#<section class="gradient-bg text-white py-16">#}
+{#<header class="bg-white shadow-sm sticky top-0 z-10">#}
+<header class="gradient-bg text-white shadow-sm sticky top-0 z-10">
     <nav class="container mx-auto px-6 py-4 ">
         <div class="flex items-center justify-between">
 
@@ -31,7 +31,7 @@
 
             <div class="hidden md:flex items-center space-x-8">
                 <a href="/" class="hover:text-purple-200 smooth-transition">Главная</a>
-                <a href="{% url 'goods:catalog'%}"
+                <a href="{% url 'goods:catalog' %}"
                    class="hover:text-purple-200 smooth-transition">Каталог</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">Мои объявления</a>
                 <a href="#" class="hover:text-purple-200 smooth-transition">О нас</a>
@@ -55,18 +55,19 @@
                         </button>
                     </div>
                 {% else %}
-                    {#                <button class="bg-white text-purple-800 px-4 py-2 rounded-lg font-medium hover:bg-purple-100 smooth-transition">#}
-                    {#                    Войти#}
-                    {#                </button>#}
-                    <li><a href="{% url 'users:login' %}"
-                           class="bg-white text-purple-800 px-4 py-2 rounded-lg font-medium hover:bg-purple-100 smooth-transition">Вход</a>
-                    </li>
+                    {#                    <button type="submit"#}
+                    {#                            formaction="{% url 'users:login' %}" class="bg-white text-purple-800 px-4 py-2 rounded-lg font-medium hover:bg-purple-100 smooth-transition " >#}
+                    {#                        Войти#}
+                    {#                    </button>#}
+
                     {#                <button class="hidden md:block bg-purple-700 text-white px-4 py-2 rounded-lg font-medium hover:bg-purple-600 smooth-transition">#}
                     {#                    Регистрация#}
                     {#                </button>#}
-                    <li><a href="{% url 'users:register' %}"
-                           class="hidden md:block bg-purple-700 text-white px-4 py-2 rounded-lg font-medium hover:bg-purple-600 smooth-transition">Регистрация</a>
-                    </li>
+
+                    <a class="bg-white text-purple-800 px-4 py-2 rounded-lg font-medium hover:bg-purple-100 smooth-transition "
+                       href="{% url 'users:login' %}">Вход</a>
+                    <a href="{% url 'users:register' %}"
+                       class="hidden md:block bg-purple-700 text-white px-4 py-2 rounded-lg font-medium hover:bg-purple-600 smooth-transition">Регистрация</a>
 
                     <button class="md:hidden text-white">
                         <i class="fas fa-bars text-xl"></i>
@@ -148,7 +149,7 @@
         </div>
     </div>
 </footer>
-
+{% block js %}    {% endblock js %}
 <script src="{% static "js/jquery_login.js" %}"></script>
 </body>
 </html>
