--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -11,7 +11,7 @@
         <div class="container mx-auto px-4 py-8 md:py-16">
             <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden">
                 <div class="md:flex">
-{#                    <div class="hidden md:block md:w-1/3 auth-bg"></div>#}
+                    {#                    <div class="hidden md:block md:w-1/3 auth-bg"></div>#}
                     <div class="p-8 w-full">
 
                         <div class="flex justify-center mb-8">
@@ -126,7 +126,7 @@
                                 </label>
                             </div>
 
-                            <button type="submit"
+                            <button type="submit" formaction="{% url 'users:register' %}"
                                     class="w-full flex justify-center py-2 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 Зарегистрироваться
                             </button>
@@ -135,7 +135,7 @@
                         <div class="mt-6 text-center">
                             <p class="text-sm text-gray-600">
                                 Уже есть аккаунт?
-                                <a href="login.html"
+                                <a href="{% url 'users:login' %}"
                                    class="font-medium text-blue-600 hover:text-blue-500 ml-1">Войти</a>
                             </p>
                         </div>
