--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -39,7 +39,7 @@
                         </div>
 
                         <!-- Registration Form -->
-                        <form class="space-y-4 mt-6" id="registrationForm">
+                        <form method="post" action="{% url 'users:register' %}" class="space-y-4 mt-6" id="registrationForm">
                             <div class="grid grid-cols-2 gap-4">
                                 <div>
                                     <label for="first-name"
@@ -126,7 +126,7 @@
                                 </label>
                             </div>
 
-                            <button type="submit" formaction="{% url 'users:register' %}"
+                            <button type="submit"
                                     class="w-full flex justify-center py-2 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 Зарегистрироваться
                             </button>
