ФронтЭнд  работа с формами

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -93,7 +93,7 @@
                         <div class="mt-6 text-center">
                             <p class="text-sm text-gray-600">
                                 Нет аккаунта?
-                                <a href="{% url 'users:register' %}"
+                                <a href="{% url 'users:registration' %}"
                                    class="font-medium text-blue-600 hover:text-blue-500 ml-1">Зарегистрироваться</a>
                             </p>
                         </div>
