--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 
                     <a class="bg-white text-purple-800 px-4 py-2 rounded-lg font-medium hover:bg-purple-100 smooth-transition "
                        href="{% url 'users:login' %}">Вход</a>
-                    <a href="{% url 'users:register' %}"
+                    <a href="{% url 'users:registration' %}"
                        class="hidden md:block bg-purple-700 text-white px-4 py-2 rounded-lg font-medium hover:bg-purple-600 smooth-transition">Регистрация</a>
 
                     <button class="md:hidden text-white">
