ФронтЭнд  работа с формами

--- a/main/templates/main/index_.html
+++ b/main/templates/main/index_.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Главная{% endblock title %}
-
 
 {% block content %}
- <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+  <link href="{% static 'css/catalog_styles.css' %}" rel="stylesheet">
     <!-- Hero Section -->
     <section class="gradient-bg text-white py-16">
         <div class="max-w-3xl mx-auto text-center">
