--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <!-- Bootstrap CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
     {#    <title>Профиль пользователя | Обменник</title>#}
@@ -23,24 +23,24 @@
             <div class="col-md-4 mb-4">
                 <div class="card mb-4">
                     <div class="card-body text-center">
-{#                        <div class="profile-avatar mb-3 mx-auto" style="width: 150px; height: 150px;">#}
-{#                            <div class="rounded-circle bg-primary-subtle w-100 h-100 d-flex align-items-center justify-content-center overflow-hidden">#}
-{#                                <i class="fas fa-user text-primary fs-1"></i>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <h4 class="card-title fw-bold">Иван Иванов</h4>#}
-{#                        <p class="text-muted small">На сервисе с 12.03.2022</p>#}
-{##}
-{#                        <div class="d-flex justify-content-center align-items-center my-2">#}
-{#                            <div class="me-2">#}
-{#                                <i class="fas fa-star rating-star filled"></i>#}
-{#                                <i class="fas fa-star rating-star filled"></i>#}
-{#                                <i class="fas fa-star rating-star filled"></i>#}
-{#                                <i class="fas fa-star rating-star filled"></i>#}
-{#                                <i class="fas fa-star rating-star"></i>#}
-{#                            </div>#}
-{#                            <small class="text-muted">4.2 (7 отзывов)</small>#}
-{#                        </div>#}
+                        {#                        <div class="profile-avatar mb-3 mx-auto" style="width: 150px; height: 150px;">#}
+                        {#                            <div class="rounded-circle bg-primary-subtle w-100 h-100 d-flex align-items-center justify-content-center overflow-hidden">#}
+                        {#                                <i class="fas fa-user text-primary fs-1"></i>#}
+                        {#                            </div>#}
+                        {#                        </div>#}
+                        {#                        <h4 class="card-title fw-bold">Иван Иванов</h4>#}
+                        {#                        <p class="text-muted small">На сервисе с 12.03.2022</p>#}
+                        {##}
+                        {#                        <div class="d-flex justify-content-center align-items-center my-2">#}
+                        {#                            <div class="me-2">#}
+                        {#                                <i class="fas fa-star rating-star filled"></i>#}
+                        {#                                <i class="fas fa-star rating-star filled"></i>#}
+                        {#                                <i class="fas fa-star rating-star filled"></i>#}
+                        {#                                <i class="fas fa-star rating-star filled"></i>#}
+                        {#                                <i class="fas fa-star rating-star"></i>#}
+                        {#                            </div>#}
+                        {#                            <small class="text-muted">4.2 (7 отзывов)</small>#}
+                        {#                        </div>#}
 
                         <div class="nav flex-column mt-4">
                             <a href="profile.html" class="nav-link active d-flex align-items-center">
@@ -55,10 +55,12 @@
                             <a href="messages.html" class="nav-link d-flex align-items-center">
                                 <i class="fas fa-envelope me-2"></i> Сообщения
                             </a>
-                            <a href="settings.html" class="nav-link d-flex align-items-center">
-                                <i class="fas fa-cog me-2"></i> Настройки
-                            </a>
-                            <a href="#" class="nav-link d-flex align-items-center">
+                            {% if  user.is_staff %}
+                                <a href="/admin/" class="nav-link d-flex align-items-center">
+                                    <i class="fas fa-cog me-2"></i> Админка
+                                </a>
+                            {% endif %}
+                            <a href="{% url 'users:logout' %}" class="nav-link d-flex align-items-center">
                                 <i class="fas fa-sign-out-alt me-2"></i> Выйти
                             </a>
                         </div>
