работа с формами login and register

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 
+{% block css %}
+    <!-- Custom CSS -->
+
+{% endblock css %}
 {% block Hero_Section %}
     <!-- Hero Section -->
     <section class="py-5 py-lg-10">
