работа с формами login and register

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
     <!-- Custom CSS -->
     <link href="{% static  'css/styles.css' %}" rel="stylesheet">
 
+    <!-- VK SDK -->
+    <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
+
+
 </head>
 
 <body>
