--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -54,7 +54,7 @@
 
                                         <!-- Vk login -->
 
-                                        <div id="VkIdSdkOneTap"></div>
+                                        <div class="auth-container" id="VkIdSdkOneTap"></div>
 
 
                                         <form method="post">
@@ -210,7 +210,7 @@
 
     <!--  JS VK Auth -->
 {#    <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>#}
-    <script src="{% static "/js/index.js" %}"></script>
+{#    <script src="{% static "/js/index.js" %}"></script>#}
     <script src="{% static "/js/js_vk_auth.js" %}"></script>
 
 {% endblock content %}
