работа с формами login and register

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -175,7 +175,7 @@
     <script src="{% static "/js/jquery_login.js" %}"></script>
 
     <!--  JS VK Auth -->
-    {#    <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>#}
+    <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
     {#    <script src="{% static "/js/index.js" %}"></script>#}
     {#    <script src="{% static "/js/js_vk_auth.js" %}"></script>#}
     <script src="{% static "/js/js_vk.js" %}"></script>
